# stalecheck

./: .gitignore  README.md  pyproject.toml
stalecheck/: checker.py  cli.py  devsettings.py  logger.py  models.py  output.py
stalecheck/parsers/: __init__.py  npm.py  parser.py  pyproject.py  requirements.py
stalecheck/registries/: __init__.py  pypi.py
stalecheck/settings/: __init__.py  dev.py
